--- a/Highlight.html
+++ b/Highlight.html
@@ -3,96 +3,99 @@
 <head>
 <meta charset="UTF-8">
 <title>Qualtrics Highlighter</title>
+
 <style>
 body { font-family: sans-serif; padding: 20px; }
 #stimulus { border: 1px solid #ccc; padding: 15px; border-radius: 5px; }
 .highlighted { background-color: yellow; cursor: pointer; }
-.followup { margin-top: 20px; }
-.followup-item { margin-bottom: 15px; padding: 10px; border: 1px solid #ccc; border-radius: 5px; }
 </style>
 </head>
 <body>
 
 <div id="stimulus">
-<!-- Your stimulus text goes here -->
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
 </div>
 
-<div id="followup" class="followup"></div>
-
 <script>
-const stimulusDiv = document.getElementById("stimulus");
-const followupDiv = document.getElementById("followup");
-let highlights = [];
+const stimDiv = document.getElementById("stimulus");
+let rawText = stimDiv.textContent;
+let highlights = [];  
+// each item: {start: Number, end: Number, text: String}
 
-// Function to render highlights
-function renderHighlights() {
-    let html = stimulusDiv.textContent;
-    highlights.sort((a,b) => b.length - a.length); // longest first
-    highlights.forEach(h => {
-        const safe = h.replace(/[.*+?^${}()|[\]\\]/g, '\\$&');
-        const regex = new RegExp(safe, "g");
-        html = html.replace(regex, `<span class="highlighted">${h}</span>`);
-    });
-    stimulusDiv.innerHTML = html;
+// ---- Re-render text with highlights applied ----
+function render() {
+    let html = "";
+    let last = 0;
+
+    // Sort by start index
+    highlights.sort((a, b) => a.start - b.start);
+
+    for (let h of highlights) {
+        html += rawText.slice(last, h.start);  
+        html += `<span class="highlighted" data-start="${h.start}" data-end="${h.end}">${rawText.slice(h.start, h.end)}</span>`;
+        last = h.end;
+    }
+    html += rawText.slice(last);
+
+    stimDiv.innerHTML = html;
 
     // Add click-to-remove
-    stimulusDiv.querySelectorAll('.highlighted').forEach(span => {
+    stimDiv.querySelectorAll(".highlighted").forEach(span => {
         span.onclick = () => {
-            const idx = highlights.indexOf(span.textContent);
-            if(idx !== -1) {
-                highlights.splice(idx,1);
-                renderHighlights();
-                renderFollowups();
-            }
+            const s = Number(span.dataset.start);
+            const e = Number(span.dataset.end);
+            highlights = highlights.filter(h => !(h.start === s && h.end === e));
+            render();
         };
     });
 }
 
-// Function to render follow-up inputs
-function renderFollowups() {
-    followupDiv.innerHTML = "<h3>Please explain each highlighted segment:</h3>";
-    highlights.forEach((h,i) => {
-        const div = document.createElement("div");
-        div.className = "followup-item";
-        const p = document.createElement("p");
-        p.textContent = `Highlight ${i+1}: ${h}`;
-        const textarea = document.createElement("textarea");
-        textarea.id = `reason_${i+1}`;
-        textarea.style.width = "100%";
-        textarea.style.height = "80px";
-        div.appendChild(p);
-        div.appendChild(textarea);
-        followupDiv.appendChild(div);
-    });
-}
-
-// Selection handling
-stimulusDiv.addEventListener("mouseup", () => {
+// ---- Detect selection and add to highlights ----
+stimDiv.addEventListener("mouseup", () => {
     const sel = window.getSelection();
-    const text = sel.toString().trim();
-    if(text && !highlights.includes(text)) {
-        highlights.push(text);
-        renderHighlights();
-        renderFollowups();
+    const text = sel.toString();
+
+    if (!text.trim()) return;
+
+    let anchorNode = sel.anchorNode;
+    let focusNode = sel.focusNode;
+    if (!anchorNode || !focusNode) return;
+
+    // Compute absolute start & end indexes in rawText
+    const full = rawText;
+    const selection = sel.getRangeAt(0);
+
+    const range = selection;
+    const preRange = range.cloneRange();
+    preRange.selectNodeContents(stimDiv);
+
+    preRange.setEnd(range.startContainer, range.startOffset);
+    let start = preRange.toString().length;
+    let end = start + text.length;
+
+    // Prevent duplicate identical ranges
+    if (!highlights.some(h => h.start === start && h.end === end)) {
+        highlights.push({ start, end, text });
+        render();
     }
+
     sel.removeAllRanges();
 });
 
-// Function to send data back to Qualtrics
+// ---- Export highlights to Qualtrics before Next button ----
 function sendToQualtrics() {
-    const data = highlights.join("|||");
-    window.parent.Qualtrics.SurveyEngine.setEmbeddedData("all_highlights", data);
-    highlights.forEach((h,i) => {
-        const val = document.getElementById(`reason_${i+1}`)?.value || "";
-        window.parent.Qualtrics.SurveyEngine.setEmbeddedData(`reason_${i+1}`, val);
-    });
     window.parent.Qualtrics.SurveyEngine.setEmbeddedData("highlight_count", highlights.length);
+
+    highlights.forEach((h, i) => {
+        window.parent.Qualtrics.SurveyEngine.setEmbeddedData(`highlight_${i+1}_text`, h.text);
+        window.parent.Qualtrics.SurveyEngine.setEmbeddedData(`highlight_${i+1}_start`, h.start);
+        window.parent.Qualtrics.SurveyEngine.setEmbeddedData(`highlight_${i+1}_end`, h.end);
+    });
 }
 
-// Optional: hook into Next button using postMessage
+// ---- Receive signal from Qualtrics Next button ----
 window.addEventListener("message", e => {
-    if(e.data === "qualtricsNext") sendToQualtrics();
+    if (e.data === "qualtricsNext") sendToQualtrics();
 });
 </script>
 
