--- a/Highlight.html
+++ b/Highlight.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Qualtrics Highlighter - Robust</title>
+<title>Qualtrics Highlighter — Range-based (fixed)</title>
 <style>
   body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; padding: 16px; }
   #stimulus {
     border: 1px solid #ccc;
     padding: 12px;
     border-radius: 6px;
-    white-space: pre-wrap;      /* preserve spaces/newlines exactly like in the source text */
-    line-height: 1.4;
+    white-space: pre-wrap;   /* preserve whitespace/newlines exactly */
+    line-height: 1.45;
     user-select: text;
   }
   .highlighted {
@@ -29,131 +29,120 @@ Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor i
 (function() {
   const stimDiv = document.getElementById('stimulus');
 
-  // rawText is the authoritative plain-text copy of the stimulus
-  const rawText = stimDiv.textContent;
-  let highlights = []; // {start: Number, end: Number, text: String}
+  // Helper: unwrap a span (replace it with its text node)
+  function unwrapSpan(span) {
+    const textNode = document.createTextNode(span.textContent);
+    span.parentNode.replaceChild(textNode, span);
+  }
 
-  // Render DOM from rawText + highlights using createTextNode + span nodes.
-  function render() {
-    // sort highlights by start
-    highlights.sort((a,b) => a.start - b.start);
-
-    // create document fragment to avoid innerHTML string replace issues
-    const frag = document.createDocumentFragment();
-    let last = 0;
-    for (const h of highlights) {
-      // append text from last to highlight.start
-      if (h.start > last) {
-        frag.appendChild(document.createTextNode(rawText.slice(last, h.start)));
+  // Helper: find highlight spans that intersect a Range
+  function spansIntersectingRange(range) {
+    const spans = Array.from(stimDiv.querySelectorAll('.highlighted'));
+    return spans.filter(span => {
+      try {
+        // If the span is partly or wholly inside the range, that's an intersection
+        const spanRange = document.createRange();
+        spanRange.selectNodeContents(span);
+        // tests: compare boundary points
+        return !(range.compareBoundaryPoints(Range.END_TO_START, spanRange) <= 0 ||
+                 range.compareBoundaryPoints(Range.START_TO_END, spanRange) >= 0);
+      } catch (e) {
+        return false;
       }
-      // create highlighted span for exact range
-      const span = document.createElement('span');
-      span.className = 'highlighted';
-      span.dataset.start = h.start;
-      span.dataset.end = h.end;
-      span.textContent = rawText.slice(h.start, h.end);
-      frag.appendChild(span);
-      last = h.end;
-    }
-    // append remaining text
-    if (last < rawText.length) {
-      frag.appendChild(document.createTextNode(rawText.slice(last)));
-    }
-
-    // replace content (safe because we used nodes, not parsed HTML strings)
-    stimDiv.innerHTML = '';
-    stimDiv.appendChild(frag);
-
-    // attach click-to-remove handlers to spans
-    stimDiv.querySelectorAll('.highlighted').forEach(span => {
-      span.addEventListener('click', (ev) => {
-        ev.stopPropagation();
-        const s = Number(span.dataset.start);
-        const e = Number(span.dataset.end);
-        highlights = highlights.filter(h => !(h.start === s && h.end === e));
-        render();
-      });
     });
   }
 
-  // compute absolute start index of selection relative to rawText
-  function getSelectionOffsets() {
-    const sel = window.getSelection();
-    if (!sel || sel.rangeCount === 0) return null;
-    const range = sel.getRangeAt(0);
-    const text = range.toString();
-    if (!text.trim() && text.length === 0) return null;
-
-    // Create a clone range that starts at the beginning of the stimDiv and ends at selection start
-    const preRange = document.createRange();
-    preRange.selectNodeContents(stimDiv);
-    preRange.setEnd(range.startContainer, range.startOffset);
-    const start = preRange.toString().length;
-    const end = start + text.length;
-
-    return { start, end, text };
-  }
-
-  // Add highlight if it doesn't overlap exactly the same range
+  // Add a highlight by wrapping the current selection's Range in a span.
   function addHighlightFromSelection() {
-    const info = getSelectionOffsets();
-    if (!info) return;
-    // avoid duplicates (same start & end)
-    if (highlights.some(h => h.start === info.start && h.end === info.end)) {
-      window.getSelection().removeAllRanges();
+    const sel = window.getSelection();
+    if (!sel || sel.rangeCount === 0) return;
+    const range = sel.getRangeAt(0);
+    if (range.collapsed) return;
+
+    // Ensure selection is inside stimDiv
+    if (!stimDiv.contains(range.commonAncestorContainer)) return;
+
+    // Step 1: unwrap any existing highlight spans that intersect this range
+    const intersecting = spansIntersectingRange(range);
+    intersecting.forEach(unwrapSpan);
+
+    // After unwrapping, selection may have changed; re-get selection range
+    // (safe to get the first range again)
+    if (!sel || sel.rangeCount === 0) return;
+    const freshRange = sel.getRangeAt(0);
+    if (freshRange.collapsed) {
+      sel.removeAllRanges();
       return;
     }
-    // Prevent highlights outside rawText bounds
-    if (info.start < 0 || info.end > rawText.length || info.start >= info.end) {
-      window.getSelection().removeAllRanges();
-      return;
-    }
-    highlights.push({ start: info.start, end: info.end, text: info.text });
-    render();
-    window.getSelection().removeAllRanges();
+
+    // Step 2: create a new span and insert the selected contents into it
+    const span = document.createElement('span');
+    span.className = 'highlighted';
+    span.dataset.id = 'h' + Date.now() + Math.floor(Math.random()*10000);
+
+    // extractContents will remove the selected fragment and return a DocumentFragment
+    const frag = freshRange.extractContents();
+    span.appendChild(frag);
+    freshRange.insertNode(span);
+
+    // Normalize (merge adjacent text nodes)
+    stimDiv.normalize();
+
+    // Attach click handler to remove this highlight
+    span.addEventListener('click', function(e) {
+      e.stopPropagation();
+      // replace span with its text node
+      const textNode = document.createTextNode(span.textContent);
+      span.parentNode.replaceChild(textNode, span);
+      stimDiv.normalize();
+    });
+
+    // Clear selection
+    sel.removeAllRanges();
   }
 
-  // Hook selection end
-  stimDiv.addEventListener('mouseup', function(e) {
-    // Use a short timeout because some browsers finalize selection slightly after mouseup
+  // Hook mouseup and keyup to create highlights
+  stimDiv.addEventListener('mouseup', function() {
+    // small timeout so selection finalizes in some browsers
     setTimeout(addHighlightFromSelection, 0);
   });
 
-  // Also support double-click (word selection), keyboard selection, etc.
-  stimDiv.addEventListener('keyup', function(e) {
-    if (e.key === 'Enter' || e.key === ' ' || e.key === 'Escape') return;
+  stimDiv.addEventListener('keyup', function() {
+    // capture keyboard-based selections
     setTimeout(addHighlightFromSelection, 0);
   });
 
-  // Send highlights to Qualtrics when told (postMessage)
+  // Build array of highlights in document order (span text only)
+  function collectHighlightsInOrder() {
+    const spans = Array.from(stimDiv.querySelectorAll('.highlighted'));
+    // Order is DOM order already; map to text
+    return spans.map(s => s.textContent);
+  }
+
+  // Send highlights back to Qualtrics (called when parent posts 'qualtricsNext')
   function sendToQualtrics() {
+    const highlights = collectHighlightsInOrder();
     try {
-      // set highlight_count
       window.parent.Qualtrics.SurveyEngine.setEmbeddedData('highlight_count', highlights.length);
-      // set per-highlight fields
-      highlights.forEach((h, i) => {
-        window.parent.Qualtrics.SurveyEngine.setEmbeddedData(`highlight_${i+1}_text`, h.text);
-        window.parent.Qualtrics.SurveyEngine.setEmbeddedData(`highlight_${i+1}_start`, h.start);
-        window.parent.Qualtrics.SurveyEngine.setEmbeddedData(`highlight_${i+1}_end`, h.end);
+      highlights.forEach((text, i) => {
+        window.parent.Qualtrics.SurveyEngine.setEmbeddedData(`highlight_${i+1}_text`, text);
       });
-      // clear any unused reason_N fields? Qualtrics will leave them blank if not set.
+      // Optionally clear later indices? Qualtrics leaves blank if not set.
     } catch (err) {
-      console.warn('Could not set embedded data (are you testing locally without Qualtrics parent?)', err);
+      console.warn('Not in Qualtrics environment or error setting embedded data:', err);
     }
   }
 
+  // Listen for Next message
   window.addEventListener('message', function(e) {
-    if (e.data === 'qualtricsNext') {
-      sendToQualtrics();
-    }
+    if (e.data === 'qualtricsNext') sendToQualtrics();
   });
 
-  // initial render
-  render();
+  // Expose for debugging (optional)
+  window.__highlighter_internal = { collectHighlightsInOrder };
 
-  // Expose for debugging in console (optional)
-  window.__highlighter_debug = { rawText, highlights, render };
 })();
 </script>
+
 </body>
 </html>
